# Attention-is-all-you-need

./: .gitignore  README.md  bpe_32000.json  data.py  data_config.py  install_mac.sh  model.py  pyproject.toml  requirements.txt  train.py
configs/: base_config.yaml
notebooks/: data_prep.ipynb  dataloader.ipynb  transformer.ipynb
