[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "flax>=0.12.4",
    "jax[cuda13]>=0.9.0.1",
    "pandas>=3.0.1",
    "tokenizers>=0.22.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
